feat: add blog index page

--- a/content/posts/the-road-map.mdx
+++ b/content/posts/the-road-map.mdx
@@ -5,13 +5,13 @@ authorAvatarUrl: https://github.com/jabedzaman.png
 title: The roadmap
 date: 2024-07-03
 excerpt: The inital release of the project.
-image: https://source.unsplash.com/random/800x600
+image: https://neon.tech/_next/image?url=https%3A%2F%2Fneondatabase.wpengine.com%2Fwp-content%2Fuploads%2F2024%2F04%2Fneon-transactions-journal-1.jpg&w=3840&q=85&dpl=dpl_4qgupJz19oYEp6BS1Go84oimVJRz
 tags: release, project
 ---
 
 hi
 
-```
+```tsx title="fib.ts" 
 import { useState } from 'react';
 
 export default function Counter() {
